click function JS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1 class="welcome">Welcome to Tic-Tac-Toe</h1>
     <div class="player">
-        <label>Player 1:</label>
-        <input type="text" id="1st_player">
+        <label>Player-1:</label>
+        <input type="text" id="1st_player" placeholder="Enter name">
     </div>
     
     <div class="player">
-        <label>Player 2:</label>
-        <input type="text" id="2nd_player">
+        <label>Player-2:</label>
+        <input type="text" id="2nd_player" placeholder="Enter name">
     </div>
     
     <div id="score">
